tests/positive/ownership_inout.safe
-- Test: ownership_inout
-- Description: Passing an owner by in out without using it afterward.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Expected: ACCEPT

package ownership_Inout

   type payload is record
      value : integer;


   type payload_Ptr is access payload;

   function consume (Ref : in out payload_Ptr)
      return;


   function use_Inout
      Owner : payload_Ptr = new ((value = 5) as payload);

      consume (Owner);

